--- a/index.html
+++ b/index.html
@@ -2,28 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>AR Animal Detector</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AR Human Model</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
-  <section class="container">
-    <h1>✨ AR Human Anatomy</h1>
-    <model-viewer
+  <div class="container">
+    <!-- Webcam feed -->
+    <video id="webcam" autoplay playsinline></video>
+
+    <!-- 3D model viewer -->
+    <model-viewer id="animalModel"
       src="model.glb"
       ios-src="model.usdz"
       ar
-      ar-modes="scene-viewer webxr quick-look"
       camera-controls
       autoplay
+      alt="Animal"
+      exposure="1"
       shadow-intensity="1"
-      alt="3D model"
       style="width: 100%; height: 500px;"
     >
-      <button slot="ar-button" class="ar-button">👓 View in AR</button>
     </model-viewer>
-    <p class="note">Use Android or iOS device to launch AR experience</p>
-  </section>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/vision_bundle.mjs" type="module"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
