--- a/index.html
+++ b/index.html
@@ -2,33 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AR Animal Detector</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet" />
+  <title>Animal AR Detector</title>
   <link rel="stylesheet" href="style.css" />
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <!-- Webcam feed -->
-    <video id="webcam" autoplay playsinline></video>
+  <video id="webcam" autoplay muted playsinline></video>
+  <canvas id="webgl-canvas"></canvas>
 
-    <!-- 3D model viewer -->
-    <model-viewer id="animalModel"
-      src="model.glb"
-      ios-src="model.usdz"
-      ar
-      camera-controls
-      autoplay
-      alt="Animal"
-      exposure="1"
-      shadow-intensity="1"
-      style="width: 100%; height: 500px;"
-    >
-    </model-viewer>
-  </div>
+  <!-- Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/examples/js/loaders/GLTFLoader.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/vision_bundle.mjs" type="module"></script>
-  <script src="script.js" type="module"></script>
+  <!-- MediaPipe -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/vision_bundle.mjs"></script>
+
+  <!-- App -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
