--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Animal AR Detector</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>AR Animal Detector</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet" />
+  <!-- model-viewer -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
-  <video id="webcam" autoplay muted playsinline></video>
-  <canvas id="webgl-canvas"></canvas>
+  <div class="container">
+    <!-- Webcam feed -->
+    <video id="webcam" autoplay muted playsinline></video>
 
-  <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.153.0/examples/js/loaders/GLTFLoader.js"></script>
+    <!-- 3D model viewer -->
+    <model-viewer id="model-viewer"
+      src="model.glb"
+      ios-src="model.usdz"
+      alt="3D animal"
+      camera-controls
+      autoplay
+      exposure="1"
+      shadow-intensity="1"
+      interaction-prompt="none"
+      ar
+      ar-modes="scene-viewer webxr quick-look"
+    >
+    </model-viewer>
+  </div>
 
-  <!-- MediaPipe -->
+  <!-- MediaPipe + script -->
   <script type="module" src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/vision_bundle.mjs"></script>
-
-  <!-- App -->
-  <script type="module" src="app.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
