--- a/index.html
+++ b/index.html
@@ -5,29 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🦖 T-Rex AR Experience</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main class="hero">
-    <div class="content">
-      <h1>🦖 Tyrannosaurus Rex</h1>
-      <p>Experience the king of dinosaurs in Augmented Reality.</p>
+  <main class="container">
+    <h1>🦖 Tyrannosaurus Rex</h1>
+    <p class="subtitle">Experience the king of dinosaurs in Augmented Reality.</p>
 
-      <model-viewer
-        src="model.glb"
-        ios-src="model.usdz"
-        ar
-        ar-modes="scene-viewer webxr quick-look"
-        camera-controls
-        autoplay
-        shadow-intensity="1"
-        alt="A 3D model of T-Rex"
-        style="width: 100%; height: 500px; background: transparent;"
-      >
-        <button slot="ar-button" class="ar-button">👓 View in AR</button>
-      </model-viewer>
-    </div>
+    <model-viewer
+      src="model.glb"
+      ios-src="model.usdz"
+      ar
+      ar-modes="scene-viewer webxr quick-look"
+      camera-controls
+      autoplay
+      shadow-intensity="1"
+      alt="A 3D model of T-Rex"
+      class="model-viewer"
+    >
+      <button slot="ar-button" class="ar-button">👓 View in AR</button>
+    </model-viewer>
+
+    <p class="note">No app required – works in your browser.</p>
   </main>
 </body>
 </html>
